--- a/helmfile/apps/docs/charts/docs/templates/frontend-deployment.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/frontend-deployment.yaml
@@ -97,7 +97,7 @@ spec:
               value: {{ .Values.frontend.containerPorts.http | quote }}
             - name: NEXT_PUBLIC_API_ORIGIN
               # FIXME this should be changed to a more common variable like baseUrl or calculated here.
-              value: {{ .Values.django.csrfTrustedOrigin | quote }}
+              value: {{ include "docs.baseUrl" . | quote }}
             {{- if .Values.frontend.extraEnvVars }}
             {{- include "common.tplvalues.render" (dict "value" .Values.frontend.extraEnvVars "context" $) | nindent 12 }}
             {{- end }}
