--- a/helmfile/apps/docs/charts/docs/templates/yprovider-service.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/yprovider-service.yaml
@@ -36,8 +36,8 @@ spec:
   {{- end }}
   ports:
     - name: http
-      port: {{ .Values.yProvider.service.ports.https }}
-      {{- if not (eq .Values.yProvider.service.ports.https .Values.yProvider.containerPorts.https) }}
+      port: {{ .Values.yProvider.service.ports.http }}
+      {{- if not (eq .Values.yProvider.service.ports.http .Values.yProvider.containerPorts.https) }}
       targetPort: {{ .Values.yProvider.containerPorts.https }}
       {{- end }}
       protocol: TCP
