✨(chat) Process environment variable configuration

--- a/helmfile/apps/docs/charts/docs/templates/backend-deployment.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/backend-deployment.yaml
@@ -151,9 +151,9 @@ spec:
             - name: empty-dir
               mountPath: /tmp
               subPath: tmp-dir
-            {{- if .Values.backend.themeCustomization.enabled }}
+            {{- if .Values.backend.configuration.themeCustomization.enabled }}
             - name: theme-customization
-              mountPath: {{ .Values.backend.themeCustomization.mountPath }}
+              mountPath: {{ .Values.backend.configuration.themeCustomization.mountPath }}
               readOnly: true
             {{- end }}
             {{- if .Values.backend.extraVolumeMounts }}
@@ -165,7 +165,7 @@ spec:
       volumes:
         - name: empty-dir
           emptyDir: {}
-        {{- if .Values.backend.themeCustomization.enabled }}
+        {{- if .Values.backend.configuration.themeCustomization.enabled }}
         - name: theme-customization
           configMap:
             name: {{ include "docs.theme.fullname" . }}
