--- a/helmfile/apps/docs/charts/docs/templates/backend-cronjob-list.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/backend-cronjob-list.yaml
@@ -110,9 +110,9 @@ items:
                     - name: empty-dir
                       mountPath: /tmp
                       subPath: tmp-dir
-                    {{- if $.Values.backend.themeCustomization.enabled }}
+                    {{- if $.Values.backend.configuration.themeCustomization.enabled }}
                     - name: theme-customization
-                      mountPath: {{ $.Values.backend.themeCustomization.mountPath }}
+                      mountPath: {{ $.Values.backend.configuration.themeCustomization.mountPath }}
                       readOnly: true
                     {{- end }}
                     {{- if $.Values.backend.extraVolumeMounts }}
@@ -124,7 +124,7 @@ items:
               volumes:
                 - name: empty-dir
                   emptyDir: {}
-                {{- if $.Values.backend.themeCustomization.enabled }}
+                {{- if $.Values.backend.configuration.themeCustomization.enabled }}
                 - name: theme-customization
                   configMap:
                     name: {{ include "docs.theme.fullname" . }}
