--- a/helmfile/apps/docs/charts/docs/templates/celery-worker-deployment.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/celery-worker-deployment.yaml
@@ -148,9 +148,9 @@ spec:
             - name: empty-dir
               mountPath: /tmp
               subPath: tmp-dir
-            {{- if .Values.backend.themeCustomization.enabled }}
+            {{- if .Values.backend.configuration.themeCustomization.enabled }}
             - name: theme-customization
-              mountPath: {{ .Values.backend.themeCustomization.mountPath }}
+              mountPath: {{ .Values.backend.configuration.themeCustomization.mountPath }}
               readOnly: true
             {{- end }}
           {{- if .Values.backend.celery.extraVolumeMounts }}
@@ -162,7 +162,7 @@ spec:
       volumes:
         - name: empty-dir
           emptyDir: {}
-        {{- if .Values.backend.themeCustomization.enabled }}
+        {{- if .Values.backend.configuration.themeCustomization.enabled }}
         - name: theme-customization
           configMap:
             name: {{ include "docs.theme.fullname" . }}
