--- a/helmfile/apps/docs/charts/docs/values.yaml
+++ b/helmfile/apps/docs/charts/docs/values.yaml
@@ -613,15 +613,107 @@ backend:
   #       - python manage.py flush --no-input
   ## @param backend.cronJobs Cron job name, schedule, command
   cronJobs: []
-  ## Theme customization and translation options
-  ## Ref: https://github.com/suitenumerique/docs/blob/main/docs/theming.md
-  ## @param backend.themeCustomization.enabled Enable theme customization
-  ## @param backend.themeCustomization.fileContent Content of the theme customization file. Must be a json object.
-  ## @param backend.themeCustomization.mountPath Path where the customization file will be mounted in the backend deployment.
-  themeCustomization:
-    enabled: false
-    fileContent: ""
-    mountPath: /app/impress/configuration/theme
+  configuration:
+    ai:
+      # Enable AI options
+      enabled: false
+      # Users that can use AI must be this level. options are "public", "authenticated", "restricted"
+      allowReachFrom: "authenticated"
+      # AI key to be used for AI Base url
+      apiKey: "myApiKey"
+      # OpenAI compatible AI base url
+      baseUrl: "http://dev-backend-ai.docs.svc.cluster.local"
+      # AI Model to use
+      model: "myModel"
+    analytics:
+      crisp:
+        # Crisp website id for support
+        websiteId: ""
+    django:
+      configuration: Feature
+      cors:
+        # Allow all CORS origins
+        allowAllOrigins: false
+        # List of origins allowed for CORS using regulair expressions
+        allowedOriginRegexes: ""
+        # List of origins allowed for CORS
+        allowedOrigins: ""
+      email:
+        # Email backend library
+        backend: django.core.mail.backends.smtp.EmailBackend
+        # Email address used as sender
+        from: from@example.com
+        # Brand name for email
+        brandName: "La Suite Numérique"
+        host:
+          # Hostname of email
+          name: "mailcatcher"
+          # User to authenticate with on the email host
+          username: ""
+          # Password to authenticate with on the email host
+          password: ""
+        # Logo for the email
+        logoImg: https://docs.127.0.0.1.nip.io/assets/logo-suite-numerique.png
+        # Port used to connect to email host
+        port: 1025
+        # Use ssl for email host connection
+        useSsl: false
+        # Use tls for email host connection
+        useTls: false
+      serverToServerApiTokens: secret-api-key
+      secretKey: djangoSecretKey
+      settingsModule: impress.settings
+      storagesStaticFilesBackend: whitenoise.storage.CompressedManifestStaticFilesStorage
+      superUser:
+        email: you@example.com
+        password: admin
+    document:
+      # Maximum size of document in bytes
+      maxSize: 10485760
+    frontend:
+      # To add a external css file to the app
+      cssUrl: ""
+      # Frontend feature flag to display the homepage
+      homepageFeatureEnabled: false
+      # Frontend theme to use
+      theme: ""
+    # Default language
+    languageCode: "en-us"
+    logging:
+      level:
+        handlers:
+          console: ERROR
+        loggers:
+          # Default logging level. options are "DEBUG", "INFO", "WARN", "ERROR", "CRITICAL"
+          root: INFO
+          # Application logging level. options are "DEBUG", "INFO", "WARN", "ERROR", "CRITICAL"
+          app: INFO
+    malwareDetection:
+      # The malware detection backend use from the django-lasuite package
+      backend: lasuite.malware_detection.backends.dummy.DummyBackend
+      # A dict containing all the parameters to initiate the malware detection backend
+      parameters: { "callback_path": "core.malware_detection.malware_detection_callback", }
+    # Sentry host
+    sentryDsn: ""
+    # Duration of the cookie session
+    sessionCookieAge: 43200
+    #
+    spectacularSettingsEnableDjangoDeployCheck: false
+    ## Theme customization and translation options
+    ## Ref: https://github.com/suitenumerique/docs/blob/main/docs/theming.md
+    ## @param backend.themeCustomization.enabled Enable theme customization
+    ## @param backend.themeCustomization.fileContent Content of the theme customization file. Must be a json object.
+    ## @param backend.themeCustomization.mountPath Path where the customization file will be mounted in the backend deployment.
+    themeCustomization:
+      enabled: false
+      # Cache duration for the customization settings
+      cacheTimeout: 86400
+      fileContent: ""
+      # Full path to the file customizing the theme. An example is provided in src/backend/impress/configuration/theme/default.json
+      filePath: ""
+      mountPath: /app/impress/configuration/theme
+    # Trashbin cutoff
+    trashbinCutoffDays: 30
   celery:
     ## Celery worker image
     ## @param backend.celery.replicaCount Number of Celery worker replicas to deploy
@@ -998,6 +1090,10 @@ backend:
       ##
       ingressNSMatchLabels: {}
       ingressNSPodMatchLabels: {}
+    configuration:
+      broker:
+        # Celery broker transport options
+        transportOptions: "{}"
 
 ## @section Impress frontend Parameters
 ##
@@ -1471,6 +1567,13 @@ frontend:
     ##     timeoutSeconds: 300
     ##
     sessionAffinityConfig: {}
+  configuration:
+    # Backend domain - it uses the current domain if not initialized
+    apiOrigin: ""
+    # To not install the service worker
+    serviceWorkerDeactivated: false
+    # Removes packages whose licences are incompatible with the MIT licence (xl-docx-exporter: GPL, xl-pdf-exporter: GPL, xl-multi-column: GPL)
+    publishAsMit: true
 
 ## @section Docs y-provider Parameters
 ##
@@ -1941,10 +2044,24 @@ yProvider:
     ##     timeoutSeconds: 300
     ##
     sessionAffinityConfig: {}
-  api:
-    key: my-secret
-  caches:
-    keyPrefix: "docs"
+  configuration:
+    api:
+      # Y provider API key
+      key: my-secret
+    caches:
+      # The prefix used to every cache keys.
+      keyPrefix: "docs"
+      # Cache default timeout
+      defaultTimeout: 30
+    conversionApi:
+      # Conversion api content field
+      contentField: content
+      # Conversion API endpoint
+      endpoint: convert
+      # Require secure conversion api
+      secure: false
+      # Conversion api timeout
+      timeout: 30
 
 ## @section Traffic Exposure Parameters
 ##
@@ -2778,75 +2895,105 @@ metrics:
     selector: {}
 
 ## @section Configuration paramaters
-## ServiceAccount configuration
-## ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/
-##
 collaboration:
   api:
+    # Collaboration api secret
     secret: my-secret
   loggingEnabled: true
   webSockets:
-    url: wss://docs.127.0.0.1.nip.io/collaboration/ws/
-    notConnectedReadOnly: false
-
-django:
-  configuration: Feature
-  serverToServerApiTokens: secret-api-key
-  secretKey: djangoSecretKey
-  settingsModule: impress.settings
-  superUser:
-    email: you@example.com
-    password: admin
-  email:
-    brandName: "La Suite Numérique"
-    host: "mailcatcher"
-    logoImg: https://docs.127.0.0.1.nip.io/assets/logo-suite-numerique.png
-    port: 1025
-    useSsl: false
-  storagesStaticFilesBackend: django.contrib.staticfiles.storage.StaticFilesStorage
-
-logging:
-  level:
-    handlers:
-      console: ERROR
-    loggers:
-      root: info
-      app: info
+    notConnected:
+      # Users not connected to the collaboration server cannot edit
+      readOnly: false
+      # Cache used to store current editor session key when only users without websocket are editing a document
+      cacheTimeout: 120
 
 auth:
   oidc:
-    userInfo:
-      shortNameField: "given_name"
-      fullNameField: "given_name,usual_name"
+    # Allow duplicate emails
+    allowDuplicateEmails: false
+    # OIDC extra auth parameters
+    authRequestExtraParams: "{}"
+    # Create used on OIDC
+    createUser: false
+    # Fallback to email for identification
+    fallbackToEmailForIdentification: true
     openIdProvider:
+      # JWKS endpoint for OIDC
       jwksEndpoint: https://docs-keycloak.127.0.0.1.nip.io/realms/docs/protocol/openid-connect/certs
+      # Authorization endpoint for OIDC
       authorizationEndpoint: https://docs-keycloak.127.0.0.1.nip.io/realms/docs/protocol/openid-connect/auth
+      # Token endpoint for OIDC
       tokenEndpoint: https://docs-keycloak.127.0.0.1.nip.io/realms/docs/protocol/openid-connect/token
+      # User endpoint for OIDC
       userEndpoint: https://docs-keycloak.127.0.0.1.nip.io/realms/docs/protocol/openid-connect/userinfo
+      # Logout endpoint for OIDC
       logoutEndpoint: https://docs-keycloak.127.0.0.1.nip.io/realms/docs/protocol/openid-connect/logout
+    redirect:
+      # Allowed hosts for OIDC redirect url
+      allowedHosts: []
+      # Require https for OIDC redirect url
+      requireHttps: false
     relyingParty:
+      # Client id used for OIDC
       clientId: docs
+      # Client secret used for OIDC
       clientSecret: ThisIsAnExampleKeyForDevPurposeOnly
-      signAlgo: RS256
+      # Scopes requested for OIDC
       scopes: "openid email"
+      # Verification algorithm used OIDC tokens
+      signAlgo: RS256
+    # Store OIDC token
+    storeIdToken: true
+    # Use nonce for OIDC
+    useNonce: true
+    userInfo:
+      # OIDC token claims to create full name
+      fullNameField: "given_name,usual_name"
+      # OIDC token claims to create shortname
+      shortNameField: "given_name"
+    # Essential claims in OIDC token
+    userEssentialClaims: "[]"
   login:
+    # Login redirect url
     redirectUrl: https://docs.127.0.0.1.nip.io
+    # Login redirect url on failure
     redirectUrlFailure: https://docs.127.0.0.1.nip.io
   logout:
+    # Logout redirect url
     redirectUrl: https://docs.127.0.0.1.nip.io
+  api:
+    usersList:
+      # Limit on API users
+      limit: 5
+      # Throttle rate for api on burst
+      throttleRateBurst: "30/minute"
+      # Throttle rate for api
+      throttleRateSustained: "180/hour"
 
 database:
-  host: dev-backend-postgres
+  # Engine to use for database connections
+  engine: django.db.backends.postgresql_psycopg2
+  # Host of the database
+  host: localhost
+  # Port of the database
   port: 5432
-  name: dev-backend-docs
+  # Name of the database
+  name: impress
+  # User to authenticate with
   user: dinum
+  # Password to authenticate with
   password: pass
 
 redis:
+  # Cache url, also used as Celery broker.
   url: redis://user:pass@redis-master:6379/1
 
 awsS3:
+  # S3 endpoint
   endpointUrl: http://dev-backend-minio.docs.svc.cluster.local:9000
+  # Access id for s3 endpoint
   accessKeyId: dinum
+  # Access key for s3 endpoint
   secretAccessKey: password
+  # Bucket name for s3 endpoint
   storageBucketName: docs-media-storage
