--- a/helmfile/apps/docs/charts/docs/templates/backend-deployment.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/backend-deployment.yaml
@@ -25,9 +25,11 @@ spec:
       app.kubernetes.io/component: backend
   template:
     metadata:
+      annotations:
       {{- if .Values.backend.podAnnotations }}
-      annotations: {{- include "common.tplvalues.render" (dict "value" .Values.backend.podAnnotations "context" $) | nindent 8 }}
+      {{- include "common.tplvalues.render" (dict "value" .Values.backend.podAnnotations "context" $) | nindent 8 }}
       {{- end }}
+        checksum/config: {{ include (print $.Template.BasePath "/backend-configmap-env.yaml") . | sha256sum }}
       labels: {{- include "common.labels.standard" ( dict "customLabels" $podLabels "context" $ ) | nindent 8 }}
         app.kubernetes.io/component: backend
     spec:
