--- a/helmfile/apps/nextcloud/charts/nextcloud/templates/deployment.yaml
+++ b/helmfile/apps/nextcloud/charts/nextcloud/templates/deployment.yaml
@@ -319,6 +319,13 @@ spec:
                           else
                             echo "WOPI URL configuration completed"
                           fi
+
+                          echo "Configuring WOPI Allow List for richdocuments..."
+                          if ! php /var/www/html/occ config:app:set richdocuments wopi_allowlist --value="{{ .Values.collabora.wopi_allowlist }}"; then
+                              echo "WARNING: Failed to configure WOPI Allow List"
+                          else
+                              echo "WOPI Allow List configuration completed"
+                          fi
                         fi
 
                         break
