--- a/helmfile/apps/docs/charts/docs/templates/media-service.yaml
+++ b/helmfile/apps/docs/charts/docs/templates/media-service.yaml
@@ -3,6 +3,7 @@
 SPDX-License-Identifier: APACHE-2.0
 */}}
 
+{{- if .Values.ingressMedia.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -16,44 +17,12 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.serviceMedia.type }}
-  {{- if and .Values.serviceMedia.clusterIP (eq .Values.serviceMedia.type "ClusterIP") }}
-  clusterIP: {{ .Values.serviceMedia.clusterIP }}
-  {{- end }}
-  {{- if .Values.serviceMedia.sessionAffinity }}
-  sessionAffinity: {{ .Values.serviceMedia.sessionAffinity }}
-  {{- end }}
-  {{- if .Values.serviceMedia.sessionAffinityConfig }}
-  sessionAffinityConfig: {{- include "common.tplvalues.render" (dict "value" .Values.serviceMedia.sessionAffinityConfig "context" $) | nindent 4 }}
-  {{- end }}
-  {{- if or (eq .Values.serviceMedia.type "LoadBalancer") (eq .Values.serviceMedia.type "NodePort") }}
-  externalTrafficPolicy: {{ .Values.serviceMedia.externalTrafficPolicy | quote }}
-  {{- end }}
-  {{- if and (eq .Values.serviceMedia.type "LoadBalancer") (not (empty .Values.serviceMedia.loadBalancerSourceRanges)) }}
-  loadBalancerSourceRanges: {{ .Values.serviceMedia.loadBalancerSourceRanges }}
-  {{- end }}
-  {{- if and (eq .Values.serviceMedia.type "LoadBalancer") (not (empty .Values.serviceMedia.loadBalancerIP)) }}
-  loadBalancerIP: {{ .Values.serviceMedia.loadBalancerIP }}
-  {{- end }}
   ports:
-    {{- if .Values.serviceMedia.ports.http }}
     - name: http
-      port: {{ .Values.serviceMedia.ports.http }}
-      {{- if not (eq .Values.serviceMedia.ports.http .Values.frontend.containerPorts.http) }}
-      targetPort: {{ .Values.frontend.containerPorts.http }}
-      {{- end }}
       protocol: TCP
-      {{- if and (or (eq .Values.serviceMedia.type "NodePort") (eq .Values.serviceMedia.type "LoadBalancer")) (not (empty .Values.serviceMedia.nodePorts.http)) }}
-      nodePort: {{ .Values.serviceMedia.nodePorts.http }}
-      {{- else if eq .Values.serviceMedia.type "ClusterIP" }}
-      nodePort: null
-      {{- end }}
-    {{- end }}
-    {{- if .Values.serviceMedia.extraPorts }}
-    {{- include "common.tplvalues.render" (dict "value" .Values.serviceMedia.extraPorts "context" $) | nindent 4 }}
-    {{- end }}
+      port: 80
+      targetPort: {{ .Values.awsS3.endpoint.port }}
   {{- if .Values.serviceMedia.externalName }}
   externalName: {{ .Values.serviceMedia.externalName | quote }}
   {{- end }}
-  {{- $podLabels := include "common.tplvalues.merge" (dict "values" (list .Values.frontend.podLabels .Values.commonLabels) "context" .) | fromYaml }}
-  selector: {{- include "common.labels.matchLabels" ( dict "customLabels" $podLabels "context" $ ) | nindent 4 }}
-    app.kubernetes.io/component: docs
+{{- end }}
